--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.10.3",
     "octokit": "^2.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-timer-hook": "^3.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
