--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
           restore-keys: ${{ runner.os }}-yarn-
       - name: Install dependencies
         run: yarn install --frozen-lockfile --prefer-offline
-      - name: Run test
-        run: yarn test-ci
+#      - name: Run test
+#        run: yarn test-ci
