--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "octokit": "^2.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-timer-hook": "^3.0.5"
+    "react-markdown": "^8.0.3",
+    "react-timer-hook": "^3.0.5",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -28,6 +30,7 @@
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.0.1",
+    "prettier": "^2.7.1",
     "typescript": "4.8.2"
   }
 }
