--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@types/node": "18.7.14",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "bulma": "^0.9.4",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.0.1",
     "prettier": "^2.7.1",
+    "sass": "^1.54.8",
     "typescript": "4.8.2"
   }
 }
