--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.0.1",
     "prettier": "^2.7.1",
+    "react-icons": "^4.4.0",
     "sass": "^1.54.8",
     "typescript": "4.8.2"
   }
