--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test-ci": "jest --ci"
   },
   "dependencies": {
+    "dexie": "^3.2.2",
+    "dexie-react-hooks": "^1.1.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "octokit": "^2.0.7",
