--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "octokit": "^2.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-markdown": "^8.0.3",
     "react-timer-hook": "^3.0.5",
     "remark-gfm": "^3.0.1"
