--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.35.0",
     "react-markdown": "^8.0.3",
     "react-timer-hook": "^3.0.5",
+    "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
