--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test-ci": "jest --ci"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.4.2",
+    "@cloudinary/url-gen": "^1.8.6",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "next": "12.2.5",
