--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test-ci": "jest --ci"
   },
   "dependencies": {
+    "cloudinary": "^1.32.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "octokit": "^2.0.7",
