--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test-ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "cloudinary": "^1.32.0",
@@ -25,6 +26,7 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.25.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@types/node": "18.7.14",
