--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "bulma": "^0.9.4",
+    "dotenv": "^16.0.2",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "jest": "^29.0.1",
