--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -13,3 +13,9 @@ jobs:
         run: npx playwright test
         env:
           BASE_URL: ${{ github.event.deployment_status.target_url }}
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 1
