--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 on:
   deployment_status:
 jobs:
-  run-e2es:
+  run-e2e-tests:
     if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     environment:
