--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test:ci": "jest --ci",
+    "test:unit": "jest --ci",
     "test:e2e": "playwright test"
   },
   "dependencies": {
