--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cloudinary": "^1.32.0",
+    "date-fns": "^2.29.3",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "octokit": "^2.0.7",
