eslintの推奨設定を設定した

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watch",
+    "lint": "next lint --dir src",
+    "format": "next lint --fix --dir src",
+    "test": "jest --ci && playwright test",
     "test:unit": "jest --ci",
     "test:e2e": "playwright test"
   },
@@ -37,6 +38,11 @@
     "dotenv": "^16.0.2",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.0.1",
     "prettier": "^2.7.1",
