--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
       {
         "trailingComma": "all",
         "endOfLine": "lf",
-        "semi": false,
+        "semi": true,
         "singleQuote": true,
         "printWidth": 80,
         "tabWidth": 2
