Next.jsをv13にアップグレード

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "cloudinary": "^1.32.0",
     "date-fns": "^2.29.3",
-    "next": "12.2.5",
+    "next": "13",
     "next-auth": "^4.24.5",
     "octokit": "^3.1.2",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
     "react-markdown": "^8.0.3",
     "react-timer-hook": "^3.0.5",
@@ -37,7 +37,7 @@
     "bulma": "^0.9.4",
     "dotenv": "^16.0.2",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "13",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
